# vke_2

./: .clang-format  .gitignore  CMakeLists.txt
res/shaders/: test.frag  test.frag.spv  test.vert  test.vert.spv
src/vke/: dependency.cpp  dependency.hpp  global.cpp  global.hpp  lifecycle.cpp  lifecycle.hpp  pre.hpp  surface.cpp  surface.hpp  vke.cpp  vke.hpp  window.cpp  window.hpp  window_manager.cpp  window_manager.hpp
src/vke/renderer/: generic_renderer.cpp  generic_renderer.hpp  graphics_pipeline.cpp  graphics_pipeline.hpp  pipeline_layout.cpp  pipeline_layout.hpp  renderer.cpp  renderer.hpp  shader_module.cpp  shader_module.hpp
src/vke/resource/: resource.cpp  resource.hpp
src/vke/utils/: types.cpp  types.hpp  utils.cpp  utils.hpp
testapp/: CMakeLists.txt
testapp/src/: main.cpp  main.hpp
